Avoid homepage to become too wide on big screens
A max-width value is set to avoid the homepage to become too wide when
seen in very wide screens.

--- a/resources/css/ext.translate.mainpage.css
+++ b/resources/css/ext.translate.mainpage.css
@@ -5,6 +5,9 @@ body {
 .twn-mainpage {
 	background-color: #fff;
 	color: #252525;
+	max-width: 1280px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .twn-mainpage-header {
